# jamdock-gui

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
jamdock_gui/: __init__.py  __main__.py  app.py  deps.py  main_window.py  settings.py
jamdock_gui/core/: __init__.py  browser.py  docking.py  grid_box.py  pdb_clean.py  pocket.py  process_runner.py  pymol_launcher.py  qvina_log.py  receptor_prep.py  results.py  script_paths.py  state.py  waters.py
jamdock_gui/resources/: __init__.py  ngl_viewer.html
jamdock_gui/scripts/: __init__.py  jamlib  jamqvina  jamreceptor  jamresume
jamdock_gui/tabs/: __init__.py  base_tab.py  docking_tab.py  library_tab.py  receptor_tab.py  results_tab.py
jamdock_gui/widgets/: __init__.py  citation_dialog.py  log_console.py  pymol_panel.py  results_model.py  throughput_chart.py  viewer3d.py  water_panel.py
tests/: test_results.py  test_smoke.py
